# mma-prediction

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: refresh-data.yml
models/: final_test_metrics.json  market_benchmark.json  xgb_method.json  xgb_metrics_val.json  xgb_round.json  xgb_winner.json
predictions/: UFC_UFC_330_Makhachev_vs_Machado_Garry_2026-08-15.json  UFC_UFC_Fight_Night_Ankalaev_vs_Guskov_2026-07-25.json  UFC_UFC_Fight_Night_Gamrot_vs_Salkilld_2026-08-08.json  UFC_UFC_Fight_Night_Medi_vs_Rodriguez_2026-08-01.json  UFC_UFC_Fight_Night_du_Plessis_vs_Usman_2026-07-18.json  track_record.json
scripts/: build_display_priors.py  build_features.py  build_odds_benchmark.py  build_ratings.py  download_data.py  final_test_eval.py  grade_predictions.py  make_dataset.py  predict_upcoming.py  refresh_data.py  roll_window.py  train_torch.py  train_xgb.py
src/mma/: __init__.py  (+14 more)
tests/: conftest.py  test_app.py  test_dataset_fighters.py  test_dataset_fights.py  test_dataset_stats.py  test_elo_engine.py  test_elo_math.py  test_evaluate.py  test_explain.py  test_features.py  test_final_metrics.py  test_grade_predictions.py  test_history.py  test_inference.py  test_labels.py  test_market_benchmark.py  test_net.py  test_odds.py  test_parsing.py  test_predict_upcoming.py  test_processed_data.py  test_processed_features.py  test_processed_ratings.py  test_processed_torch.py  test_prospective.py  test_refresh.py  test_roll_window.py  test_smoke.py  test_snapshots.py  test_tensors.py  test_train_loop.py  test_wiki_cards.py  test_xgb.py
(+28 files in other folders)
